[gd_scene load_steps=29 format=3 uid="uid://bqji2w44moiqg"]

[ext_resource type="Script" uid="uid://uwb3lip6eosh" path="res://scripts/UI_Scripts/select_level_2.gd" id="1_brqsk"]
[ext_resource type="Shader" uid="uid://chfkq82vmvjuu" path="res://scenes/SelectLevel2.gdshader" id="2_tb5ri"]
[ext_resource type="Texture2D" uid="uid://8gsfsmx8fv71" path="res://assets/Jungle Asset Pack/parallax background/unnamed.jpg" id="3_bg6gg"]
[ext_resource type="Texture2D" uid="uid://jeehyp7hpqns" path="res://assets/Jungle Asset Pack/parallax background/Window.png" id="3_tb5ri"]
[ext_resource type="FontFile" uid="uid://d081marsgcthd" path="res://assets/Jungle Asset Pack/Pixeled.ttf" id="4_bg6gg"]
[ext_resource type="Texture2D" uid="uid://cumn5lgfm4a26" path="res://assets/Jungle Asset Pack/parallax background/Screenshot 2025-10-17 152747.png" id="5_xv5ut"]
[ext_resource type="Texture2D" uid="uid://dakrd3uqsu42m" path="res://assets/Jungle Asset Pack/parallax background/Button.png" id="7_bg6gg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg6gg"]
shader = ExtResource("2_tb5ri")
shader_parameter/speed = 0.1

[sub_resource type="AtlasTexture" id="AtlasTexture_k0dj3"]
atlas = ExtResource("3_tb5ri")
region = Rect2(1057, 162, 926, 741)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf23d"]
atlas = ExtResource("3_tb5ri")
region = Rect2(1328, 48, 344, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cj5g"]
atlas = ExtResource("7_bg6gg")
region = Rect2(759, 668, 181, 189)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rf23d"]
texture = SubResource("AtlasTexture_6cj5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m84f5"]
texture = SubResource("AtlasTexture_6cj5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a2xwi"]
texture = ExtResource("5_xv5ut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3u22v"]
texture = ExtResource("5_xv5ut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vwla1"]
texture = ExtResource("5_xv5ut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ishi2"]
texture = ExtResource("5_xv5ut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4x6gg"]
texture = ExtResource("5_xv5ut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ug01h"]
texture = ExtResource("5_xv5ut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xoo1e"]
texture = ExtResource("5_xv5ut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8omjj"]
texture = ExtResource("5_xv5ut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_24ohm"]
texture = ExtResource("5_xv5ut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bg6gg"]
texture = ExtResource("5_xv5ut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xv5ut"]
texture = ExtResource("5_xv5ut")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k0dj3"]
texture = ExtResource("5_xv5ut")

[sub_resource type="AtlasTexture" id="AtlasTexture_bg6gg"]
atlas = ExtResource("7_bg6gg")
region = Rect2(197, 1190, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv5ut"]
atlas = ExtResource("7_bg6gg")
region = Rect2(810, 1190, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2xwi"]
atlas = ExtResource("7_bg6gg")
region = Rect2(401, 1190, 181, 190)

[node name="SelectLevel2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_brqsk")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_bg6gg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bg6gg")
expand_mode = 1

[node name="LevelMenu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = -279.0
offset_right = 444.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_k0dj3")
expand_mode = 1

[node name="Title" type="TextureRect" parent="LevelMenu"]
layout_mode = 0
offset_left = 277.0
offset_top = 11.0
offset_right = 621.0
offset_bottom = 99.0
texture = SubResource("AtlasTexture_rf23d")

[node name="btnlv13" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 40.0
offset_top = 122.0
offset_right = 184.0
offset_bottom = 234.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_a2xwi")
text = "13
"

[node name="btnlv14" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 266.0
offset_top = 120.0
offset_right = 410.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_3u22v")
text = "14
"

[node name="btnlv15" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 480.0
offset_top = 120.0
offset_right = 624.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_vwla1")
text = "15"

[node name="btnlv16" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 693.0
offset_top = 121.0
offset_right = 837.0
offset_bottom = 233.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_ishi2")
text = "16
"

[node name="btnlv17" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 39.0
offset_top = 236.0
offset_right = 183.0
offset_bottom = 348.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_4x6gg")
text = "17
"

[node name="btnlv18" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 267.0
offset_top = 235.0
offset_right = 411.0
offset_bottom = 347.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_ug01h")
text = "18"

[node name="btnlv19" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 480.0
offset_top = 235.0
offset_right = 624.0
offset_bottom = 347.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_xoo1e")
text = "19
"

[node name="btnlv20" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 692.0
offset_top = 234.0
offset_right = 836.0
offset_bottom = 346.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_8omjj")
text = "20
"

[node name="btnlv21" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 39.0
offset_top = 352.0
offset_right = 183.0
offset_bottom = 464.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_24ohm")
text = "21
"

[node name="btnlv22" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 268.0
offset_top = 351.0
offset_right = 412.0
offset_bottom = 463.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_bg6gg")
text = "22
"

[node name="btnlv23" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 482.0
offset_top = 352.0
offset_right = 626.0
offset_bottom = 464.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_xv5ut")
text = "23
"

[node name="btnlv24" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 693.0
offset_top = 350.0
offset_right = 837.0
offset_bottom = 462.0
theme_override_fonts/font = ExtResource("4_bg6gg")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_k0dj3")
text = "24
"

[node name="btnBack" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 281.0
offset_right = 644.0
offset_bottom = 839.0
scale = Vector2(0.2, 0.2)
texture_normal = SubResource("AtlasTexture_bg6gg")
texture_pressed = SubResource("AtlasTexture_xv5ut")
texture_hover = SubResource("AtlasTexture_a2xwi")
stretch_mode = 0

[connection signal="pressed" from="btnBack" to="." method="_on_btn_back_pressed"]
